# backend/static/openapi.yaml
@@ -3378,12 +3378,12 @@ components:
     SoftskillPostRequestBody:
       type: object
       properties:
-        nim:
-          type: integer
-          example: "422023022"
-        nama:
+        title:
           type: string
           example: "Softskill Title"
+        penyelenggara:
+          type: string
+          example: "penyelenggara"
         deskripsi:
           type: string
           example: "deskripsi"
@@ -3404,6 +3404,9 @@ components:
         title:
           type: string
           example: "Softskill Title"
+        penyelenggara:
+          type: string
+          example: "penyelenggara"
         deskripsi:
           type: string
           example: "deskripsi"
@@ -3430,10 +3433,7 @@ components:
         date:
           type: string
           format: datetime
-          example: "2024-06-27 10:00"
-        room:
-          type: string
-          example: "Room of the class"
+          example: "2024-06-27"
        
     BillingObject:
       type: object
